[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/combat/stats/scoreboard_row.gd" id="1"]

[node name="ScoreboardRow" type="Control"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 8

[node name="Portrait" type="TextureRect" parent="HBox"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
stretch_mode = 5
expand_mode = 1

[node name="Content" type="Control" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="BarBG" type="ColorRect" parent="HBox/Content"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.12, 0.6)

[node name="BarFill" type="ColorRect" parent="HBox/Content"]
layout_mode = 2
anchor_bottom = 1.0
grow_vertical = 2
color = Color(0.25, 0.6, 1.0, 0.9)

[node name="Value" type="Label" parent="HBox/Content"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 2
vertical_alignment = 1
text = "0"

